# books-app

./: .dockerignore  .env  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
backend/backend/: config.py  settings.py  urls.py
backend/booksapp/: admin.py  models.py  urls.py  views.py
backend/booksapp/migrations/: 0001_initial.py
backend/booksapp/static/booksapp/: main.css
backend/booksapp/templates/booksapp/: base.html  enter.html  home.html  register.html
backend/users/: dataset.py  forms.py  infer.py  lookups.py  mf.py  models.py  preprocessing.py  train.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/templates/users/: add_book.html  home.html  login.html  logout.html  profile.html  register.html
